<resources>
    <string name="app_name">Supermarket 4.0</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="action_delete_account">Supprimer le compte</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">220872139149362</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb220872139149362</string>
    <string name="waiting">Patientez...!</string>
    <string name="scan_qrcode_hint">Veuillez scanner ce code sur la borne</string>
    <string name="utilisez_formulaire">Utilisez le formulaire</string>


    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_holders_name">Nom du propriétaire</string>
    <string name="card_number">Numéro de carte</string>
    <string name="card_validity">Expiration</string>
    <string name="card_cvv">Code CVV/CVC</string>
    <string name="next_label"><![CDATA[SUIVANT >>]]></string>
    <string name="cart_number_hint">Numéro de carte</string>
    <string name="name_on_card_hint">Nom sur la carte</string>
    <string name="expire_date">Date d\'expiration</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
