<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            card_view:cardCornerRadius="1dp"
            card_view:elevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CardLabel"
                    android:text="@string/card_number" />

                <com.supinfo.tp.gostore.Utils.CreditCardEditText
                    android:id="@+id/et_number"
                    style="@style/CardInput"
                    android:hint="@string/cart_number_hint"
                    android:inputType="number"
                    android:maxLength="19" />

                <TextView
                    style="@style/CardLabel"
                    android:text="@string/card_holders_name" />

                <com.supinfo.tp.gostore.Utils.CreditCardEditText
                    android:id="@+id/et_name"
                    style="@style/CardInput"
                    android:hint="@string/name_on_card_hint"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="22"
                    android:privateImeOptions="nm" />

                <TextView
                    style="@style/CardLabel"
                    android:text="@string/card_validity" />

                <com.supinfo.tp.gostore.Utils.CreditCardEditText
                    android:id="@+id/et_validity"
                    style="@style/CardInput"
                    android:hint="@string/expire_date"
                    android:inputType="number"
                    android:maxLength="5" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>

</FrameLayout>
