<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cart_number_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    style="@style/CardInput"
                    android:inputType="number"
                    android:maxLength="19"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_on_card_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/CardInput"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="22"
                    android:privateImeOptions="nm" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expire_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_validity"
                    style="@style/CardInput"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secure"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="CVV/CVC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/securedCode"
                    style="@style/CardInput"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </FrameLayout>
</ScrollView>
